Thu Jun 03 18:20:47 GMT 2010  Richard Boulton <richard@tartarus.org>

	* libs/get_xapian.py,utils/make_xappy_tarballs: Updated tarballs
	  and branchpoints.  New xapian packages include a bug fix for the
	  matcher which was occasionally causing documents to be missed
	  from the result set.

Sun May 09 09:45:53 GMT 2010  Richard Boulton <richard@tartarus.org>

	* libs/get_xapian.py: New packages, patched to avoid a segfault
	  with ValueGePostList.

Fri May 07 02:44:00 GMT 2010  Richard Boulton <richard@tartarus.org>

	* libs/get_xapian.py: Updated packages - should give considerably
	  better performance for range queries.

Thu May 06 13:17:09 GMT 2010  Richard Boulton <richard@tartarus.org>

	* external_posting_source/sortdatabase/Makefile: Fix to work with
	  latest xapian packages, by dropping the -1.1 suffix to
	  xapian-config.  Thanks to Shane Evans for pointing it out.

Wed May 05 09:26:11 GMT 2010  Richard Boulton <richard@tartarus.org>

	* libs/build_xapian.sh: Use xapian-config not xapian-config-1.1,
	  now we're using packages based on 1.2.x

Tue May 04 21:54:06 GMT 2010  Richard Boulton <richard@tartarus.org>

	* libs/get_xapian.py: Use new xapian archives - in particular,
	  these fix a replication bug.

Tue Mar 30 17:16:10 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/unittests/cached_searches.py: Test that replacing a
	  document when using store_only=True drops the document from
	  cached queries.

Tue Mar 30 17:08:58 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/indexerconnection.py: If a document is replaced with
	  store_only set, remove it from the cache.

Tue Mar 30 16:40:31 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/unittests/spell_correct_1.py: Enable an old test for a bug
	  which has long been fixed.

Wed Mar 10 15:15:41 GMT 2010  Richard Boulton <richard@tartarus.org>

	* libs/get_xapian.py: Link to new version of xapian.

Thu Mar 04 18:07:38 GMT 2010  Richard Boulton <richard@tartarus.org>
