@@ -1,3 +1,8 @@
+Thu Sep 09 15:25:08 GMT 2010  Richard Boulton <richard@tartarus.org>
+
+	* xappy/cachemanager/generic.py: Add set_queryid() method, to allow
+	  stored query ids to be set explicitly.
+
 Thu Jun 03 18:20:47 GMT 2010  Richard Boulton <richard@tartarus.org>
 
 	* libs/get_xapian.py,utils/make_xappy_tarballs: Updated tarballs
